# musicbot

./: CMakeLists.txt  README.md  run.sh
include/musicbot/: musicbot.h
src/: embed.cpp  main.cpp  wildcard.cpp
